Make sure default image alignment works

--- a/css/sass/1 - generic/_wordpress-core.scss
+++ b/css/sass/1 - generic/_wordpress-core.scss
@@ -15,8 +15,8 @@ div.aligncenter {
   margin:5px 0 20px 20px;
 }
 .alignleft {
-  float:right;
-  margin:5px 0 20px 20px;
+  float:left;
+  margin:5px 20px 20px 0;
 }
 a img.alignright {
   float:right;
@@ -26,8 +26,8 @@ a img.alignnone {
   margin:5px 20px 20px 0;
 }
 a img.alignleft {
-  float:right;
-  margin:5px 0 20px 20px;
+  float:left;
+  margin:5px 20px 20px 0;
 }
 a img.aligncenter {
   display:block;
