--- a/css/sass/4 - gui/_posts.scss
+++ b/css/sass/4 - gui/_posts.scss
@@ -21,6 +21,13 @@
     iframe{
         max-width: 100%;
     }
+    div {
+        overflow: hidden;
+
+        a {
+            display: block;
+        }
+    }
 }
 .single-post-list {
     padding: 1em;
